# winntbbdemo

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt
src/bbhost/: CMakeLists.txt  billbrd.c  billbrd.h  cmdline.c  cmdline.h  hooks.c  hooks.h  hostwin.c  hostwin.h  main.c  version.h.in  version.rc
